--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -32,14 +32,16 @@
 <div class="text-left d-flex justify-content-between align-items-center">
     <h4>รายการแจ้งซ่อมในระบบ</h4>
     <div class="input-group input-group-sm" style="max-width: 300px;">
-        @using (Html.BeginForm("Index", "Home", FormMethod.Get))
-        {
-            <input type="text" name="searchTerm" value="@ViewData["SearchTerm"]" class="form-control" placeholder="ค้นหาจากชื่อผู้แจ้งซ่อม" aria-label="Search">
-        }
-        <button class="btn btn-primary text-white" type="submit">
-                <i class="fas fa-search"></i> ค้นหา
+    @using (Html.BeginForm("Index", "Home", FormMethod.Get, new { @class = "d-flex w-100" }))
+    {
+        <input type="text" name="searchTerm" value="@ViewData["SearchTerm"]" class="form-control form-control-sm" placeholder="ค้นหาจากชื่อผู้แจ้งซ่อม" aria-label="Search">
+        <button class="btn btn-primary text-white btn-sm"  type="submit" style="width: 120px;">
+            <i class="fas fa-search me-1" style="font-size: 1rem;"> </i> Search
         </button>
-    </div>
+
+    }
+</div>
+
 </div>
 
 <div class="container mt-5">
